feat(chatbots): add code-based access per project